--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <a href="./airpods Max/index.html"></a>
+  <a href="./airpods Max/index.html">airpods max</a>
 </body>
 
 </html>
