--- a/airpods Max/index.html
+++ b/airpods Max/index.html
@@ -37,6 +37,46 @@
     </div>
     </main>
   </section>
+  <section>
+    <div class="container color">
+      <div class="description">
+        <div class="foto">
+          <img src="./girl.jpeg" alt="f">
+        </div>
+        <div class="text">
+
+          <div class="desc_position">
+            <h2>Sounds like <br> an epiphany</h2>
+          </div>
+          <div class="desc">
+            <p>AirPods Max combine high-fidelity audio with industry-leading Active Noise Cancellation to deliver an
+              unparalleled listening experience. Each part of their custom-built driver works to produce sound with
+              ultra-low distortion across the audible range. From deep, rich bass to accurate mids and crisp, clean
+              highs,
+              you’ll hear every note with a new sense of clarity.</p>
+            <button>----></button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <section>
+      <div class="container">
+        <div class="flex">
+          <div class="text">
+            <div class="margin">
+              <h2>Megical <br> experience</h2>
+              <p>Introducing AirPods Max — a perfect balance of exhilarating high-fidelity audio and the effortless
+                magic of
+                AirPods. The ultimate personal listening experience is here.</p>
+              <button>Read More</button>
+            </div>
+          </div>
+          <div class="airpods">
+            <img src="./airpods.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
 </body>
 
 </html>
