--- a/airpods Max/index.html
+++ b/airpods Max/index.html
@@ -38,7 +38,7 @@
     </main>
   </section>
   <section>
-    <div class="container color">
+    <div class="container color jc">
       <div class="description">
         <div class="foto">
           <img src="./girl.jpeg" alt="f">
