--- a/cleaning/index.html
+++ b/cleaning/index.html
@@ -12,6 +12,11 @@
 </head>
 
 <body>
+  <div class="doli"> <a href="#">Оплачивайте заказ частями в пунктах приема с помощью сервиса</a>
+    <div class="logo-doli">
+      <img src="./doli.svg" alt="">
+    </div>
+  </div>
   <section class="banner">
     <header>
       <nav>
@@ -79,6 +84,40 @@
       <img class="stars3" src="./stars.svg" alt="">
     </div>
   </section>
+  <div class="sale">
+    <div class="sale_item">
+      <img src="./arrow.svg" alt="/">
+      <a href="#">промокод Family -15%</a>
+    </div>
+    <div class="sale_item">
+      <img src="./arrow.svg" alt="/">
+      <a href="#">промокод Family -15%</a>
+    </div>
+    <div class="sale_item">
+      <img src="./arrow.svg" alt="/">
+      <a href="#">промокод Family -15%</a>
+    </div>
+    <div class="sale_item">
+      <img src="./arrow.svg" alt="/">
+      <a href="#">промокод Family -15%</a>
+    </div>
+    <div class="sale_item">
+      <img src="./arrow.svg" alt="/">
+      <a href="#">промокод Family -15%</a>
+    </div>
+    <div class="sale_item">
+      <img src="./arrow.svg" alt="/">
+      <a href="#">промокод Family -15%</a>
+    </div>
+    <div class="sale_item">
+      <img src="./arrow.svg" alt="/">
+      <a href="#">промокод Family -15%</a>
+    </div>
+    <div class="sale_item">
+      <img src="./arrow.svg" alt="/">
+      <a href="#">промокод Family -15%</a>
+    </div>
+  </div>
 </body>
 
 </html>
