--- a/cleaning/index.html
+++ b/cleaning/index.html
@@ -118,6 +118,105 @@
       <a href="#">промокод Family -15%</a>
     </div>
   </div>
+  <section class="gradient">
+    <div class="cards_box">
+      <div class="cards_item">
+        <p>Сделаем в срок или бесплатно</p>
+      </div>
+      <div class="cards_item">
+        <p>Большой опыт работы с Люкс брендами</p>
+      </div>
+      <div class="cards_item">
+        <p>100% возврат, если не устроило качество</p>
+      </div>
+      <div class="cards_item">
+        <p>Бережный ручной уход</p>
+      </div>
+      <div class="cards_item">
+        <p>Относимся к каждой вещи, как к своей</p>
+      </div>
+      <div class="cards_item">
+        <p>Гарантия на выполненные работы</p>
+      </div>
+    </div>
+    <div class="union">
+      <img src="./unionl.svg" alt="">
+      <img src="./unionr.svg" alt="">
+    </div>
+    <div class="container padd">
+      <img class="starpink1" src="./starpink.svg" alt="">
+      <img class="starpink2" src="./starpink.svg" alt="">
+      <img class="starpink3" src="./starpink.svg" alt="">
+      <h1>
+        Заботимся о каждой детали, чтобы <br> вы всегда выглядели безупречно
+      </h1>
+      <h2>
+        выберите подходящую категорию
+      </h2>
+      <div class="categorii_card">
+        <div class="categorii_card_item">
+          <a class="bc" href="#">oбувь</a>
+          <a href="#">
+            <img src="./main1.png" alt="">
+          </a>
+        </div>
+        <div class="categorii_card_item">
+          <a class="bc" href="#">сумки и аксессуары</a>
+          <a href="#">
+            <img src="./main2.png" alt="">
+          </a>
+        </div>
+        <div class="categorii_card_item">
+          <a class="bc" href="#">домашний текстиль</a>
+          <a href="#">
+            <img src="./ main3.png" alt="">
+          </a>
+        </div>
+        <div class="categorii_card_item">
+          <a class="bc" href="#">верхняя одежда</a>
+          <a href="#">
+            <img src="./main4.png" alt="">
+          </a>
+        </div>
+        <div class="categorii_card_item">
+          <a class="bc" href="#">одежда</a>
+          <a href="#">
+            <img src="./main5.png" alt="">
+          </a>
+        </div>
+        <div class="categorii_card_item">
+          <a class="bc" href="#">мебель</a>
+          <a href="#">
+            <img src="./main6.png" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="feedback">
+        <h1 style="text-transform: uppercase; font-size: 40px;">что о нас <br> говорят люди</h1>
+        <div class="carousel_feedback">
+          <img src="./fb1.png" alt="">
+          <img src="./fb2.png" alt="">
+          <img src="./fb3.png" alt="">
+        </div>
+        <img class="subsract_l_fb" src="./subsract_l.svg" alt="">
+        <img class="subsract_r_fb" src="./substract_r.svg" alt="">
+        <ol class="carousel__indicators">
+          <li class="carousel__indicators_item filled"></li>
+          <li class="carousel__indicators_item"></li>
+          <li class="carousel__indicators_item"></li>
+          <li class="carousel__indicators_item"></li>
+        </ol>
+      </div>
+      <div class="delivery">
+        <div class="text">
+          <h1>Заберем и доставим бесплатно</h1>
+          <h2>или вызовем Яндекс.Курьера по выгодному тарифу</h2>
+          <button>Заказать доставку</button>
+        </div>
+        <img src="./fb4.png" alt="">
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
