--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <a href="./airpods Max/index.html">airpods max</a>
-  <a href="./cleaning/index.html"></a>
+  <a href="./cleaning/index.html">puur</a>
 </body>
 
 </html>
