--- a/cleaning/index.html
+++ b/cleaning/index.html
@@ -209,14 +209,43 @@
       </div>
       <div class="delivery">
         <div class="text">
-          <h1>Заберем и доставим бесплатно</h1>
-          <h2>или вызовем Яндекс.Курьера по выгодному тарифу</h2>
-          <button>Заказать доставку</button>
+          <p class="on_h1">от 3000p</p>
+          <h1>Заберем и доставим <br> бесплатно</h1>
+          <h2>или вызовем Яндекс.Курьера <br> по выгодному тарифу</h2>
+          <button class="bt_delivery">Заказать доставку</button>
         </div>
         <img src="./fb4.png" alt="">
       </div>
     </div>
   </section>
+  <section>
+    <div class="container center">
+      <img class="karta" src="./skrin.png" alt="">
+    </div>
+  </section>
+  <footer>
+    <div class="container ft">
+      <div class="place">
+        <h4> пункты приема</h4>
+        <p>Тула, ул.Болдина 123</p>
+        <p>График работы: <br>
+          пн-пт:10-20 <br>
+          сб-вс:11-18</p>
+      </div>
+      <div class="flex_ft">
+        <div class="zakaz">
+          <h4>Мои заказы</h4>
+          <a href="#">Узнать статус заказа</a>
+        </div>
+        <div class="kontact">
+          <h4>Контакты</h4>
+          <a href="#">+7 905 114 55 44</a>
+          <a href="#">ВКонтакте</a>
+          <a href="#">WhatsApp</a>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
