--- a/cleaning/index.html
+++ b/cleaning/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="st.css">
+  <link rel="stylesheet" href="media.css">
   <title>Puur</title>
 </head>
 
@@ -151,6 +152,7 @@
         выберите подходящую категорию
       </h2>
       <div class="categorii_card">
+        <div class="box">
         <div class="categorii_card_item">
           <a class="bc" href="#">oбувь</a>
           <a href="#">
@@ -187,6 +189,7 @@
             <img src="./main6.png" alt="">
           </a>
         </div>
+      </div>
       </div>
       <div class="feedback">
         <h1 style="text-transform: uppercase; font-size: 40px;">что о нас <br> говорят люди</h1>
