--- a/cleaning/index.html
+++ b/cleaning/index.html
@@ -83,7 +83,7 @@
     </div>
   </section>
   <div class="sale">
-    <div class="sale_item">
+    <div class="sale_item first">
       <img src="./arrow.svg" alt="/">
       <a href="#">промокод Family -15%</a>
     </div>
