--- a/cleaning/index.html
+++ b/cleaning/index.html
@@ -25,7 +25,7 @@
         <div class="main-nav">
           <a class="bc-border" href="tel:+7 905 114 55 44">+7 905 114 55 44</a>
           <a href="#">Статус заказа</a>
-          <a href="#">Услуги</a>
+          <a href="index2.html">Услуги</a>
           <a href="#">Контакты</a>
         </div>
       </nav>
