--- a/cleaning/index2.html
+++ b/cleaning/index2.html
@@ -19,13 +19,13 @@
       <nav>
         <div class="logo">
           <h2>puur</h2>
-          <a class="bc-border" href="index.html">Тула</a>
+          <a class="bc-border" href="index.html">Рязань</a>
         </div>
         <div class="main-nav">
           <a class="bc-border" href="tel:+7 905 114 55 44">+7 905 114 55 44</a>
           <a href="#">Статус заказа</a>
-          <a href="#">Услуги</a>
-          <a href="#">Контакты</a>
+          <a href="index2.html">Услуги</a>
+          <a href="#kont">Контакты</a>
         </div>
       </nav>
     </header>
@@ -41,8 +41,8 @@
             <a href="index3.html">Ремонт</a>
           </div>
           <div>
-            <a href="#">Реставрация</a>
-            <a href="">Дополнительно</a>
+            <a href="index4.html">Реставрация</a>
+            <a href="index5.html">Дополнительно</a>
           </div>
         </div>
         <table class="price_tb1">
@@ -122,6 +122,39 @@
       <a href="#">промокод Family -15%</a>
     </div>
   </div>
+  <section>
+    <div class="container flex_main2 bcolor">
+      <div class="text">
+        <h1>Консультация и точная <br> стоимость по фото</h1>
+        <button class="whatsapp">Whatsapp
+        </button>
+      </div>
+      <img class="whats" src="./whatsapp.png" alt="">
+    </div>
+  </section>
+  <footer>
+    <div class="container ft">
+      <div class="place">
+        <h4> пункты приема</h4>
+        <p>Рязань, ул.Чапаева 59</p>
+        <p>График работы: <br>
+          пн-пт:10-20 <br>
+          сб-вс:11-18</p>
+      </div>
+      <div class="flex_ft">
+        <div class="zakaz">
+          <h4>Мои заказы</h4>
+          <a href="#">Узнать статус заказа</a>
+        </div>
+        <div class="kontact">
+          <h4 id="kont">Контакты</h4>
+          <a href="#">+7 905 114 55 44</a>
+          <a href="#">ВКонтакте</a>
+          <a href="#">WhatsApp</a>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
