--- a/cleaning/index4.html
+++ b/cleaning/index4.html
@@ -38,98 +38,70 @@
         <div class="prise_catr">
           <div>
             <a href="index2.html">химчистка</a>
-            <a class="here" href="index3.html">Ремонт</a>
+            <a href="index3.html">Ремонт</a>
           </div>
           <div>
-            <a href="index4.html">Реставрация</a>
+            <a class="here" href="index4.html">Реставрация</a>
             <a href="index5.html">Дополнительно</a>
           </div>
         </div>
-        <table class="price_tb2">
+        <table class="price_tb3">
           <tbody>
             <tr>
-              <td class="font-w">Замена набоек</td>
+              <td class="font-w">Восстановление цвета</td>
               <td></td>
             </tr>
             <tr>
-              <td>Женские</td>
-              <td>1290</td>
+              <td>Низкие</td>
+              <td>990</td>
             </tr>
             <tr>
-              <td>мужские</td>
-              <td>1390</td>
-            </tr>
-            <tr>
-              <td>шпильки</td>
-              <td>890</td>
-            </tr>
-            <tr>
-              <td class="font-w">Замена профилактики</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Женская</td>
-              <td>1390</td>
-            </tr>
-            <tr>
-              <td>мужская</td>
+              <td>Высокие</td>
               <td>1490</td>
             </tr>
             <tr>
-              <td>замена сетки</td>
-              <td>1890</td>
+              <td class="font-w">Частичная покраска</td>
+              <td></td>
             </tr>
             <tr>
-              <td>замена задников</td>
-              <td>1890</td>
-            </tr>
-            <tr>
-              <td>текстиль</td>
-              <td>2190</td>
+              <td>замша</td>
+              <td>1390</td>
             </tr>
             <tr>
               <td>кожа</td>
-              <td>1890</td>
+              <td>1490</td>
             </tr>
             <tr>
-              <td class="font-w">Замена молнии</td>
+              <td class="font-w">Полная покраска</td>
               <td></td>
             </tr>
             <tr>
-              <td>до 15 см</td>
-              <td>890</td>
+              <td>Низкие замша</td>
+              <td>2390</td>
             </tr>
             <tr>
-              <td>от 15 см</td>
-              <td>1290</td>
+              <td>низкие кожа</td>
+              <td>1990</td>
             </tr>
             <tr>
-              <td>Замена бегунка</td>
-              <td>390</td>
+              <td>высокие замша</td>
+              <td>2990</td>
             </tr>
             <tr>
-              <td class="font-w">подклейка</td>
+              <td>высокие кожа</td>
+              <td>2490</td>
+            </tr>
+            <tr>
+              <td class="font-w">Реставрация</td>
               <td></td>
             </tr>
             <tr>
-              <td>подошва на пару</td>
-              <td>1290</td>
+              <td>глубоких царапин</td>
+              <td>790</td>
             </tr>
             <tr>
-              <td>шва</td>
-              <td>390</td>
-            </tr>
-            <tr>
-              <td class="font-w">прошивка</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>подошвы</td>
-              <td>1290</td>
-            </tr>
-            <tr>
-              <td>шва</td>
-              <td>390</td>
+              <td>каблуков</td>
+              <td>1490</td>
             </tr>
           </tbody>
         </table>
