--- a/cleaning/index5.html
+++ b/cleaning/index5.html
@@ -24,7 +24,7 @@
         <div class="main-nav">
           <a class="bc-border" href="tel:+7 905 114 55 44">+7 905 114 55 44</a>
           <a href="#">Статус заказа</a>
-          <a href="index2.html">Услуги</a>
+          <a href="#">Услуги</a>
           <a href="#kont">Контакты</a>
         </div>
       </nav>
@@ -38,98 +38,42 @@
         <div class="prise_catr">
           <div>
             <a href="index2.html">химчистка</a>
-            <a class="here" href="index3.html">Ремонт</a>
+            <a href="index3.html">Ремонт</a>
           </div>
           <div>
             <a href="index4.html">Реставрация</a>
-            <a href="index5.html">Дополнительно</a>
+            <a  class="here" href="index5.html">Дополнительно</a>
           </div>
         </div>
-        <table class="price_tb2">
+        <table class="price_tb3">
           <tbody>
             <tr>
-              <td class="font-w">Замена набоек</td>
-              <td></td>
+              <td>удаление запаха</td>
+              <td>390</td>
             </tr>
             <tr>
-              <td>Женские</td>
-              <td>1290</td>
-            </tr>
-            <tr>
-              <td>мужские</td>
-              <td>1390</td>
-            </tr>
-            <tr>
-              <td>шпильки</td>
+              <td>Выведение жестезны</td>
               <td>890</td>
             </tr>
             <tr>
-              <td class="font-w">Замена профилактики</td>
+              <td>растяжка</td>
+              <td>990</td>
+            </tr>
+            <tr>
+              <td class="font-w">водооталкивающая пропитка</td>
               <td></td>
             </tr>
             <tr>
-              <td>Женская</td>
-              <td>1390</td>
-            </tr>
-            <tr>
-              <td>мужская</td>
-              <td>1490</td>
-            </tr>
-            <tr>
-              <td>замена сетки</td>
-              <td>1890</td>
-            </tr>
-            <tr>
-              <td>замена задников</td>
-              <td>1890</td>
-            </tr>
-            <tr>
-              <td>текстиль</td>
-              <td>2190</td>
-            </tr>
-            <tr>
-              <td>кожа</td>
-              <td>1890</td>
-            </tr>
-            <tr>
-              <td class="font-w">Замена молнии</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>до 15 см</td>
-              <td>890</td>
-            </tr>
-            <tr>
-              <td>от 15 см</td>
-              <td>1290</td>
-            </tr>
-            <tr>
-              <td>Замена бегунка</td>
+              <td>Низкие</td>
               <td>390</td>
             </tr>
             <tr>
-              <td class="font-w">подклейка</td>
-              <td></td>
+              <td>высокие</td>
+              <td>490</td>
             </tr>
             <tr>
-              <td>подошва на пару</td>
-              <td>1290</td>
-            </tr>
-            <tr>
-              <td>шва</td>
-              <td>390</td>
-            </tr>
-            <tr>
-              <td class="font-w">прошивка</td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>подошвы</td>
-              <td>1290</td>
-            </tr>
-            <tr>
-              <td>шва</td>
-              <td>390</td>
+              <td>замена шнурков</td>
+              <td>250</td>
             </tr>
           </tbody>
         </table>
