--- a/index.html
+++ b/index.html
@@ -4,12 +4,66 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Main</title>
 </head>
 
 <body>
-  <a href="./airpods Max/index.html">airpods max</a>
-  <a href="./cleaning/index.html">puur</a>
+  <section class="first">
+    <div class="container">
+      <nav>
+        <div class="logo">
+          <img class="foto-of-logo" src="./logo.png" alt="logo">
+          <div class="column">
+            <h5>Ekaterina</h5>
+            <h5>Razumceva</h5>
+          </div>
+        </div>
+        <div class="main_nav">
+          <a href="#">портфолио</a>
+          <a href="#">этап работы</a>
+          <a href="#">стоимость</a>
+          <a href="#">контакты</a>
+        </div>
+      </nav>
+      <div class="main">
+        <div class="border-of-foto">
+          <img class="foto-of-mainp" src="./foto.png" alt="#">
+        </div>
+        <div class="description flex">
+          <h2>web developer</h2>
+          <h1>создаю сайты <span>под ключ</span></h1>
+          <h3>Разработаю для вас удобные и продающие сайты</h3>
+          <button class="kontakt_form">Связаться со мной</button>
+        </div>
+      </div>
+      <div class="bottom-nav">
+        <a href="https://t.me/+79996572249"><img class="logo-tg" src="./telegam.svg" alt=""></a>
+        <a href="#">katerazumceva@gmail.com</a>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="container">
+      <h1 class="project">Проекты</h1>
+      <div class="sites">
+        <div class="sites-item">
+          <h1 class="special-num">01</h1>
+          <a href="./airpods Max/index.html">Сайт для химчистки PUUR</a>
+          <a href="./airpods Max/index.html">
+            <img src="./photo_2024-02-19 19.35.44.jpeg" alt="">
+          </a>
+        </div>
+        <div class="sites-item">
+          <h1 class="special-num">02</h1>
+          <a href="./cleaning/index.html">Airpods Maxx</a>
+          <a href="./cleaning/index.html">
+            <img src="./photo_2024-02-19 19.35.47.jpeg" alt="">
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
