--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
           <img class="foto-of-mainp" src="./foto.png" alt="#">
         </div>
         <div class="description flex">
-          <h2>web developer</h2>
-          <h1>создаю сайты <span>под ключ</span></h1>
+          <h2>web-developer</h2>
+          <h1>создаю сайты <span class='faulty-letter'>под ключ</span></h1>
           <h3>Разработаю для вас удобные и продающие сайты</h3>
-          <button class="kontakt_form">Связаться со мной</button>
+          <button class='glowing-btn kontact-form'><span class='glowing-txt'>СВЯЗАТЬСЯ СО<span
+                class='faulty-letter'> МНОЙ</span></button>
         </div>
       </div>
       <div class="bottom-nav">
@@ -49,15 +50,15 @@
       <div class="sites">
         <div class="sites-item">
           <h1 class="special-num">01</h1>
-          <a href="./airpods Max/index.html">Сайт для химчистки PUUR</a>
-          <a href="./airpods Max/index.html">
+          <a href="./cleaning/index.html">Сайт для химчистки PUUR</a>
+          <a href="./cleaning/index.html">
             <img src="./photo_2024-02-19 19.35.44.jpeg" alt="">
           </a>
         </div>
         <div class="sites-item">
           <h1 class="special-num">02</h1>
-          <a href="./cleaning/index.html">Airpods Maxx</a>
-          <a href="./cleaning/index.html">
+          <a href="./airpods Max/index.html">Airpods Maxx</a>
+          <a href="./airpods Max/index.html">
             <img src="./photo_2024-02-19 19.35.47.jpeg" alt="">
           </a>
         </div>
