--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
             <img src="./photo_2024-02-19 19.35.47.jpeg" alt="">
           </a>
         </div>
+        <div class="sites-item">
+          <a href="./retro cars/index.html"></a>
+        </div>
       </div>
     </div>
   </section>
