--- a/retro cars/index.html
+++ b/retro cars/index.html
@@ -14,8 +14,8 @@
     <nav>
       <a class="a_name_company" href="#">Cars Classic Autotrader</a>
       <div class="nav_center">
-        <a href="#">Cars</a>
-        <a href="#">About Us</a>
+        <a href="#1">Cars</a>
+        <a href="#2">About Us</a>
         <a href="#">Services</a>
         <a href="#">Contacts</a>
       </div>
@@ -28,7 +28,7 @@
         <button class="button1">Find a car</button>
       </div>
     </div>
-    <div class="menu_with_cars">
+    <div id="1" class="menu_with_cars">
       <div class="item_cars bc1">
         <div class="padding">
           <p class="price">
@@ -45,16 +45,16 @@
       </div>
       <div class="item_cars bc2">
         <div class="padding">
-        <p class="price">
-          $66 700
-        </p>
-        <h2 class="model_car">
-          1967 Toyota 2000GT
-        </h2>
-        <div class="buttons_cars">
-          <button class="rent">rent</button>
-          <p class="miles_cars">14,900 miles</p>
-        </div>
+          <p class="price">
+            $66 700
+          </p>
+          <h2 class="model_car">
+            1967 Toyota 2000GT
+          </h2>
+          <div class="buttons_cars">
+            <button class="rent">rent</button>
+            <p class="miles_cars">14,900 miles</p>
+          </div>
         </div>
       </div>
       <div class="item_cars bc3">
@@ -111,9 +111,81 @@
       </div>
     </div>
   </section>
-  <section class="main2">
-
+  <section id="2" class="main2">
+    <div class="about_us">
+      <h1>About us <br> in numbers</h1>
+      <p>From acquisition to restoration, we specialize in iconic automobiles, ensuring each drive is a celebration of
+        timeless style. Elevate your journey with our passion for preserving automotive heritage.</p>
+    </div>
+    <div class="flex_colume">
+      <div class="car_and_numbers">
+        <div class="numbers_item">
+          <h2>32</h2>
+          <h4>Retro cars</h4>
+        </div>
+        <div class="numbers_item">
+          <h2>400</h2>
+          <h4>Satisfied clients</h4>
+        </div>
+        <div class="numbers_item">
+          <h2>5 <span class="small_text">years</span></h2>
+          <h4>Delighting our clients</h4>
+        </div>
+      </div>
+      <div class=".main_cars_absol">
+        <img class="main_cars_img" src="./7016c2ede1e3fc3b358792263629dc44 1-2.png" alt="car">
+      </div>
+    </div>
   </section>
+  <div class="container">
+    <section id="3" class="main3">
+      <div class="service">
+        <div class="title_and_button">
+          <h1>Services</h1>
+          <button class="forma"><a href="#">Submit your application</a></button>
+        </div>
+        <div class="menu_with_service">
+          <div class="service_item backr1">
+            <h3>01 / SHIPPING</h3>
+          </div>
+          <div class="service_item backr2">
+            <h3>02 / WARRANTY PURCHASE</h3>
+          </div>
+          <div class="service_item backr3">
+            <h3>03 / FINANCING</h3>
+          </div>
+        </div>
+      </div>
+      <div class="quetions_service">
+        <div class="faq">
+          <h1>Faq</h1>
+          <button class="forma"><a href="#">Ask a Question</a></button>
+        </div>
+        <div class="answers_to_qwe">
+          <div class="answers">
+            <p>Do you offer financing options for purchasing classic cars?</p>
+            <img src="./Group 26.png" alt="">
+          </div>
+          <div class="answers">
+            <p>Are the showcased cars fully restored or in original condition?</p>
+            <img src="./Group 26.png" alt="">
+          </div>
+          <div class="answers">
+            <p>Do you assist with shipping for purchased classic cars?</p>
+            <img src="./Group 26.png" alt="">
+          </div>
+          <div class="answers">
+            <p>Are your vintage cars certified or inspected for authenticity?</p>
+            <img src="./Group 26.png" alt="">
+          </div>
+          <div class="answers">
+            <p>Can I request additional photos before purchasing?</p>
+            <img src="./Group 26.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
 </body>
 
 </html>
