--- a/retro cars/index.html
+++ b/retro cars/index.html
@@ -16,8 +16,8 @@
       <div class="nav_center">
         <a href="#1">Cars</a>
         <a href="#2">About Us</a>
-        <a href="#">Services</a>
-        <a href="#">Contacts</a>
+        <a href="#3">Services</a>
+        <a href="#4">Contacts</a>
       </div>
       <a href=" +1 (240) 375-1288"> +1 (240) 375-1288</a>
     </nav>
@@ -142,24 +142,24 @@
       <div class="service">
         <div class="title_and_button">
           <h1>Services</h1>
-          <button class="forma"><a href="#">Submit your application</a></button>
+          <button class="forma">Submit your application</button>
         </div>
         <div class="menu_with_service">
-          <div class="service_item backr1">
+          <a href="#" class="service_item backr1">
             <h3>01 / SHIPPING</h3>
-          </div>
-          <div class="service_item backr2">
+          </a>
+          <a href="#" class="service_item backr2">
             <h3>02 / WARRANTY PURCHASE</h3>
-          </div>
-          <div class="service_item backr3">
+          </a>
+          <a href="#" class="service_item backr3">
             <h3>03 / FINANCING</h3>
-          </div>
+          </a>
         </div>
       </div>
       <div class="quetions_service">
         <div class="faq">
           <h1>Faq</h1>
-          <button class="forma"><a href="#">Ask a Question</a></button>
+          <button class="forma litte">Ask a Question</button>
         </div>
         <div class="answers_to_qwe">
           <div class="answers">
@@ -185,6 +185,50 @@
         </div>
       </div>
     </section>
+    <section id="4" class="main4">
+      <div class="flex_row">
+        <div class="place_company">
+          <h1>Where <br> to find us</h1>
+        </div>
+        <div class="contacts">
+          <a href="+1 (701) 581-1331">+1 (701) 581-1331</a>
+          <p>161 Trumpeter Ave, Soldotna, Alaska</p>
+          <buttton class="forma2">
+            Submit your application
+          </buttton>
+        </div>
+      </div>
+      <div style="position:relative;overflow:hidden;"><a
+          href="https://yandex.ru/maps/10131/chicago/?utm_medium=mapframe&utm_source=maps"
+          style="color:#eeeeee;font-size:12px;position:absolute;top:0px;">Чикаго</a><a
+          href="https://yandex.ru/maps/geo/downers_grove/2239869469/?ll=-87.663976%2C41.832832&utm_medium=mapframe&utm_source=maps&z=10.51"
+          style="color:#eee;font-size:12px;position:absolute;top:14px;">Даунерс-Гров — Яндекс Карты</a><iframe
+          src="https://yandex.ru/map-widget/v1/?ll=-87.663976%2C41.832832&mode=poi&poi%5Bpoint%5D=-88.011409%2C41.808600&poi%5Buri%5D=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgoyMjM5ODY5NDY5EklVbml0ZWQgU3RhdGVzIG9mIEFtZXJpY2EsIFN0YXRlIG9mIElsbGlub2lzLCBEdVBhZ2UgQ291bnR5LCBEb3duZXJzIEdyb3ZlIgoN1QWwwhUCPCdC&z=10.51"
+          width="100%" height="400" frameborder="1" allowfullscreen="true"
+          style="position:relative; border: none; margin-bottom: 50px;"></iframe></div>
+    </section>
+    <footer>
+      <div class="company_footer">
+        <h3>Cars Classic Autotrader</h3>
+        <p class="text_decotaion">Privacy Policies</p>
+        <p class="company_of_site">© Cars Classic Autotrader 2024</p>
+      </div>
+      <div class="nav_footer">
+        <div class="left">
+          <a href="#1">Cars</a>
+          <a href="#2">About Us</a>
+          <a href="#3">Services</a>
+        </div>
+        <div class="right">
+          <a href="#4">How to rent</a>
+          <a href="#4">Contacts</a>
+        </div>
+      </div>
+      <div class="contact_footer">
+        <a href="#4">+1 (701) 581-1331</a>
+        <p>161 Trumpeter Ave, Soldotna, Alaska</p>
+      </div>
+    </footer>
   </div>
 </body>
 
