--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           <h2>web-developer</h2>
           <h1>создаю сайты <span class='faulty-letter'>под ключ</span></h1>
           <h3>Разработаю для вас удобные и продающие сайты</h3>
-          <button class='glowing-btn kontact-form'><span class='glowing-txt'>СВЯЗАТЬСЯ СО<span
-                class='faulty-letter'> МНОЙ</span></button>
+          <button class='glowing-btn kontact-form'><span class='glowing-txt'>СВЯЗАТЬСЯ СО<span class='faulty-letter'>
+                МНОЙ</span></button>
         </div>
       </div>
       <div class="bottom-nav">
@@ -63,7 +63,8 @@
           </a>
         </div>
         <div class="sites-item">
-          <a href="./retro cars/index.html"></a>
+          <h1>03</h1>
+          <a href="./retro cars/index.html">Retro cars</a>
         </div>
       </div>
     </div>
