--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
           </a>
         </div>
         <div class="sites-item">
-          <h1>03</h1>
+          <h1 class="special-num">03</h1>
           <a href="./retro cars/index.html">Retro cars</a>
+          <img src="./retro cars.jpg" alt="">
         </div>
       </div>
     </div>
